# agent-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent-tools-code/: Cargo.toml
crates/agent-tools-code/examples/: notebook_edit.rs  web_search_tavily.rs
crates/agent-tools-code/src/: bash_async.rs  bash_async_tests.rs  compress.rs  discovery.rs  fs-supervision.rs  fs.rs  lib.rs  notebook.rs  policy.rs  process.rs  search.rs  shell.rs  shell_tests.rs  task.rs  todo.rs  web.rs  web_search.rs
crates/agent/examples/: anthropic_basic.rs  with_tools.rs
crates/agent/src/: abort.rs  error.rs  file_cache.rs  json.rs  lib.rs  prelude.rs  testing.rs
crates/agent/src/api/: cache.rs  effort.rs  errors.rs  logging.rs  mod.rs  output.rs  retry.rs
crates/agent/src/attachments/: anthropic_client.rs  files.rs  mod.rs  smart.rs
crates/agent/src/bootstrap/: migrations.rs  mod.rs
crates/agent/src/compact/: auto.rs  grouping.rs  microcompact.rs  mod.rs  post_cleanup.rs  prompt.rs  session_memory.rs  summarize.rs  with_hooks.rs
crates/agent/src/context/: mod.rs  sliding_window.rs
crates/agent/src/context_analysis/: mod.rs
crates/agent/src/cost/: catalog.rs  mod.rs  prices.rs  tracker.rs
crates/agent/src/hook/: event.rs  mod.rs  runner.rs
crates/agent/src/mcp/: auth.rs  config.rs  connector.rs  elicitation.rs  lifecycle.rs  mod.rs  permissions.rs  registry.rs
crates/agent/src/memdir/: age.rs  frontmatter.rs  loader.rs  memory_type.rs  mod.rs  paths.rs  relevance.rs  scan.rs
crates/agent/src/memory_extract/: mod.rs
crates/agent/src/message/: mod.rs  store.rs
crates/agent/src/permission/: chain.rs  external_queue.rs  manager.rs  mod.rs  types.rs
crates/agent/src/plugins/: manifest.rs  mod.rs  plugin.rs  registry.rs  wasm_host.rs
crates/agent/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai_compat.rs  types.rs
crates/agent/src/query/: engine.rs  loop_.rs  mod.rs
crates/agent/src/remote/: codec.rs  mod.rs  protocol.rs  session.rs
crates/agent/src/session/: mod.rs
crates/agent/src/skills/: loader.rs  mod.rs  registry.rs  skill.rs
crates/agent/src/state/: mod.rs  selector.rs  store.rs
crates/agent/src/stream/: event.rs  mod.rs  task_stream.rs  tool_executor.rs
crates/agent/src/swarm/: coordinator.rs  mailbox.rs  mod.rs  permission_sync.rs  sub_agent.rs  task.rs  team.rs
crates/agent/src/swarm/backends/: in_process.rs  iterm2.rs  mod.rs  tmux.rs
crates/agent/src/tasks/: graph.rs  mod.rs  task.rs
crates/agent/src/tokenizer/: mod.rs  tiktoken_impl.rs
crates/agent/src/tool/: mod.rs  registry.rs
crates/agent/tests/: permission_corpus.rs  prelude_exports.rs
docs/readme/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.id.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-TW.md  README.zh.md
