[workspace]
resolver = "2"
members = ["crates/agent"]

[workspace.package]
# Aligned with OpenPencil's release coordinate (v0.8.x). Phase 1+ may bump to
# 0.8.1 / 0.8.2 etc as features land. Independent semver returns post Phase 7
# cutover when API stabilizes for 1.0.
version = "0.8.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/ZSeven-W/agent-rs"
authors = ["ZSeven-W <fini.yang@gmail.com>"]
homepage = "https://github.com/ZSeven-W/agent-rs"
description = "Cross-product Rust agent runtime (OpenPencil + Zode)"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

uuid = { version = "1", features = ["v4", "serde"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"

# LLM SDK crates (per notes/2026-05-01-sdk-maturity-research.md verdict)
async-openai = "0.36"
ollama-rs = "0.3"
rmcp = "1.5"

lru = "0.18"  # bumped from 0.12 to avoid RUSTSEC-2026-0002 (IterMut unsoundness in 0.12.x)
fs4 = "0.9"

schemars = "1.2"

bytes = "1"

tempfile = "3"
assert_fs = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
