[workspace]
resolver = "2"
members = ["crates/agent", "crates/agent-tools-code"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/ZSeven-W/agent-rs"
authors = ["ZSeven-W <fini.yang@gmail.com>"]
homepage = "https://github.com/ZSeven-W/agent-rs"
description = "Cross-product Rust agent runtime (OpenPencil + Zode)"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "sync", "time", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

uuid = { version = "1", features = ["v4", "serde"] }

reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "charset", "form", "multipart", "http2"] }
eventsource-stream = "0.2"

# LLM SDK crates (per notes/2026-05-01-sdk-maturity-research.md verdict)
async-openai = { version = "0.36", default-features = false, features = ["chat-completion"] }
ollama-rs = { version = "0.3", features = ["stream"] }
rmcp = { version = "1.5", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "client-side-sse",
    "macros",
] }

lru = "0.18"  # bumped from 0.12 to avoid RUSTSEC-2026-0002 (IterMut unsoundness in 0.12.x)
fs4 = "0.9"  # sync API only; lock+IO ops are wrapped in tokio::task::spawn_blocking by callers
notify = "6"

schemars = "1.2"

bytes = "1"

# Used by api::retry (decorrelated jitter) — small, well-maintained.
rand = "0.8"

tempfile = "3"
assert_fs = "1"

# agent-tools-code feature deps
regex = "1"
ignore = "0.4"
shell-words = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 1
