[package]
name = "agent-tools-code"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Generic coding tool pack (file CRUD, shell, grep, glob) implementing agent::tool::Tool"
readme = "README.md"

[lib]
path = "src/lib.rs"

[features]
# Default ships the read-mostly subset so a host can `cargo add
# agent-tools-code` and immediately invoke files + search without
# pulling in shell/web. Hosts that need shell or web opt in
# explicitly.
default = ["fs", "search"]

# File CRUD: FileRead / FileWrite / FileEdit / ListDir / Mkdir /
# Move / Remove. Always-on tokio::fs.
fs = []

# Shell execution: Bash. Pulls shell-words for argv parsing.
shell = ["dep:shell-words"]

# Search: Grep + Glob. Pulls regex (~5 MB) + ignore.
search = ["dep:regex", "dep:ignore"]

# Web: WebFetch (HTTP GET → text). Pulls reqwest with a thin
# feature set.
web = ["dep:reqwest"]

# In-memory TodoWrite list. Pure logic, no extra deps.
todo = []

# Convenience: every tool flag on.
all = ["fs", "shell", "search", "web", "todo"]

[dependencies]
agent = { path = "../agent", default-features = false }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
schemars = { workspace = true }

# Feature-gated optional deps
regex = { workspace = true, optional = true }
ignore = { workspace = true, optional = true }
shell-words = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
assert_fs = { workspace = true }
